Bug 102334 - FILEOPEN: DOC - Some hidden text appears when non-printing characters mode is off
Summary: FILEOPEN: DOC - Some hidden text appears when non-printing characters mode is...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords: bibisected, bisected, filter:doc, regression
Depends on:
Blocks: Formatting-Mark DOC Font-Effects Regressions-705a8c22
  Show dependency treegraph
 
Reported: 2016-09-21 18:50 UTC by Timur
Modified: 2019-06-13 16:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2016-09-21 18:50:23 UTC
Attachment 127524 [details] is DOC created in MSO 2010 as a test case for tables inserted in hidden text. 
From 4.4, LO wrongly opens this hidden text, after which table was inserted, as visible, as shown in attachment 127525 [details].
Other hidden text remains hidden, as it should.

Note: Text is hidden with Format > Character. It can be seen toggling Non-printing Characters, when Tools - Options - LibreOffice Writer - Formatting Aids - Hiden Text is checked.

Tested in Windows. If confirmed, please set bibisectRequest.
Comment 1 Yousuf Philips (jay) (retired) 2016-09-23 21:17:07 UTC
Is this the same issue i mentioned in bug 102330 comment 5?
Comment 2 Timur 2016-09-24 07:02:09 UTC
(In reply to Yousuf Philips (jay) from comment #1)
> Is this the same issue i mentioned in bug 102330 comment 5?
Yes, new bug since version is different. And it's just DOC, not DOCX.

Attachment 127524 [details] is not valid, I reuploaded DOC as attachment 127596 [details], and Yousuf uploaded set as attachment 127583 [details].
Comment 3 Yousuf Philips (jay) (retired) 2016-09-25 14:03:21 UTC
(In reply to Timur from comment #2)
> (In reply to Yousuf Philips (jay) from comment #1)
> > Is this the same issue i mentioned in bug 102330 comment 5?
> Yes, new bug since version is different. And it's just DOC, not DOCX.

My comment was about DOC and not DOCX, "though in doc it also shows the first line of text that should be hidden, which turns out to be a regression introduced in 4.4."
Comment 4 Xisco Faulí 2016-09-25 20:42:08 UTC
Regression introduced by

commit 705a8c226aee3e68db492083b7cf8b704335328b
Author:     Caolán McNamara <caolanm@redhat.com
AuthorDate: Tue Sep 23 20:35:50 2014 +0100
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Wed Sep 24 10:04:48 2014 +0100

@Caolan, Could you please take a look whenever you have time?
Comment 5 Xisco Faulí 2016-09-26 14:53:46 UTC
Adding Cc: to Caolán McNamara
Comment 6 Caolán McNamara 2016-09-29 10:30:42 UTC
I think that change is actually ok, its just that it uncovers a problem in the change of

commit b3cee382f449aa69213dc21f7b1ba6a5356d2865
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Jun 27 14:52:41 2011 +0100

    Related: #i76955# make this 4+ times faster

where merging attributes across ranges that have table in them doesn't work so well
Comment 7 Commit Notification 2016-09-29 12:05:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=04f571349c1b540900fc5cebfa6a10904e349a75

Resolves: tdf#102334 Some hidden text not imported as hidden correctly

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Yousuf Philips (jay) (retired) 2016-10-04 21:14:30 UTC
Unfortunately it isnt fixed with the .doc file found in attachment 127583 [details], as "Start of Hidden Text" still appears when non-printable characters are disabled.

Version: 5.3.0.0.alpha0+
Build ID: f309531cfe1d6a1b6ea1306d45ed3e121145bc5f
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-04_03:52:18
Locale: en-US (en_US.UTF-8); Calc: group
Comment 9 Caolán McNamara 2016-10-05 09:59:39 UTC
Is this reopened because the initial reported bug isn't fixed ?
Comment 10 Timur 2016-10-05 11:25:14 UTC
It is fixed. 
DOC from attachment 127583 [details] didn't have "Start of Hidden Text" text hidden, unlike others, is it some saving issue? 
Anyway, for the sake of efficiency, I close this one. As they say, feel free to reopen if proved otherwise.
Comment 11 Yousuf Philips (jay) (retired) 2016-10-05 20:25:24 UTC
(In reply to Caolán McNamara from comment #9)
> Is this reopened because the initial reported bug isn't fixed ?

Yes i reopened it as mentioned in comment 8, or should i open another bug with the same summary for the .doc file found in attachment 127583 [details]?
Comment 12 Timur 2016-10-06 06:52:36 UTC
Please reply to Comment 10.
Comment 13 Commit Notification 2016-10-06 14:37:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=45c5412bf30f4e318277eec1d54d5c667ab9d7cd&h=libreoffice-5-2

Resolves: tdf#102334 Some hidden text not imported as hidden correctly

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Yousuf Philips (jay) (retired) 2016-10-07 04:01:10 UTC
(In reply to Timur from comment #10)
> DOC from attachment 127583 [details] didn't have "Start of Hidden Text" text
> hidden, unlike others, is it some saving issue? 

Opening it in word 2010 has "Start of Hidden Text" hidden.
Comment 15 Timur 2016-10-07 07:50:29 UTC
Right. Problems with both attachments started with LO 4.4.0 and one is fixed now, other not.
Comment 16 Yousuf Philips (jay) (retired) 2016-10-19 20:51:33 UTC
@Caolan: Should i close this bug as it fixes Timur's attachment 127525 [details] and open up a new one for my attachment 127583 [details]?
Comment 17 Xisco Faulí 2017-07-13 11:27:37 UTC
(In reply to Yousuf Philips (jay) from comment #16)
> @Caolan: Should i close this bug as it fixes Timur's attachment 127525 [details]
> [details] and open up a new one for my attachment 127583 [details]?

Hi Yousuf,
Please open a follow-up bug.
Closing this as RESOLVED FIXED