Resolves: tdf#102334 Some hidden text not imported as hidden correctly

began to be a problem since..

commit 705a8c226aee3e68db492083b7cf8b704335328b
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Sep 23 20:35:50 2014 +0100

    WW8PLCFMan::AdjustEnds deeply flawed concept wrt change tracking

but underlying problem is...

commit b3cee382f449aa69213dc21f7b1ba6a5356d2865
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Jun 27 14:52:41 2011 +0100

    Related: #i76955# make this 4+ times faster

Change-Id: I1cd42a0f51599efab9352c960a5f496626af7ac0
(cherry picked from commit 04f571349c1b540900fc5cebfa6a10904e349a75)